CodeJPParser.py
# Generated from CodeJP.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CodeJPParser ( Parser ):

    grammarFileName = "CodeJP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'||'", "'&&'", "'=='", "'!='", 
                     "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", "'*'", 
                     "'/'", "'!'", "'true'", "'false'", "'if'", "'('", "')'", 
                     "'else'", "'while'", "'do'", "'break'", "'writeport'", 
                     "','", "'readport'", "'ReadSerial'", "'WriteSerial'", 
                     "'Writeanalog'", "'Readanalog'", "'sleep'", "'='", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BASIC", "ID", 
                      "NUM", "REAL", "CHAR", "STRING", "WS" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_type = 3
    RULE_stmts = 4
    RULE_bool = 5
    RULE_join = 6
    RULE_equality = 7
    RULE_rel = 8
    RULE_expr = 9
    RULE_term = 10
    RULE_unary = 11
    RULE_factor = 12
    RULE_stmt = 13
    RULE_block = 14

    ruleNames =  [ "program", "decls", "decl", "type", "stmts", "bool", 
                   "join", "equality", "rel", "expr", "term", "unary", "factor", 
                   "stmt", "block" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    BASIC=35
    ID=36
    NUM=37
    REAL=38
    CHAR=39
    STRING=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(CodeJPParser.DeclsContext,0)


        def stmts(self):
            return self.getTypedRuleContext(CodeJPParser.StmtsContext,0)


        def getRuleIndex(self):
            return CodeJPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CodeJPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.decls()
            self.state = 31
            self.stmts()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(CodeJPParser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(CodeJPParser.DeclsContext,0)


        def getRuleIndex(self):
            return CodeJPParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)




    def decls(self):

        localctx = CodeJPParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 33
                self.decl()
                self.state = 34
                self.decls()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CodeJPParser.TypeContext,0)


        def ID(self):
            return self.getToken(CodeJPParser.ID, 0)

        def getRuleIndex(self):
            return CodeJPParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = CodeJPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.type_()
            self.state = 39
            self.match(CodeJPParser.ID)
            self.state = 40
            self.match(CodeJPParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BASIC(self):
            return self.getToken(CodeJPParser.BASIC, 0)

        def getRuleIndex(self):
            return CodeJPParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = CodeJPParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(CodeJPParser.BASIC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(CodeJPParser.StmtContext,0)


        def stmts(self):
            return self.getTypedRuleContext(CodeJPParser.StmtsContext,0)


        def getRuleIndex(self):
            return CodeJPParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)




    def stmts(self):

        localctx = CodeJPParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 72978923520) != 0):
                self.state = 44
                self.stmt()
                self.state = 45
                self.stmts()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def join(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.JoinContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.JoinContext,i)


        def getRuleIndex(self):
            return CodeJPParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)




    def bool_(self):

        localctx = CodeJPParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bool)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.join()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 50
                self.match(CodeJPParser.T__1)
                self.state = 51
                self.join()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JoinContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.EqualityContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.EqualityContext,i)


        def getRuleIndex(self):
            return CodeJPParser.RULE_join

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoin" ):
                listener.enterJoin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoin" ):
                listener.exitJoin(self)




    def join(self):

        localctx = CodeJPParser.JoinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_join)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.equality()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 58
                self.match(CodeJPParser.T__2)
                self.state = 59
                self.equality()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.RelContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.RelContext,i)


        def getRuleIndex(self):
            return CodeJPParser.RULE_equality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquality" ):
                listener.enterEquality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquality" ):
                listener.exitEquality(self)




    def equality(self):

        localctx = CodeJPParser.EqualityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_equality)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.rel()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4 or _la==5:
                self.state = 66
                _la = self._input.LA(1)
                if not(_la==4 or _la==5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 67
                self.rel()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.ExprContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.ExprContext,i)


        def getRuleIndex(self):
            return CodeJPParser.RULE_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRel" ):
                listener.enterRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRel" ):
                listener.exitRel(self)




    def rel(self):

        localctx = CodeJPParser.RelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.expr()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0):
                self.state = 71
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 72
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.TermContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.TermContext,i)


        def getRuleIndex(self):
            return CodeJPParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = CodeJPParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.term()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10 or _la==11:
                self.state = 76
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 77
                self.term()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.UnaryContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.UnaryContext,i)


        def getRuleIndex(self):
            return CodeJPParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = CodeJPParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.unary()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12 or _la==13:
                self.state = 84
                _la = self._input.LA(1)
                if not(_la==12 or _la==13):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 85
                self.unary()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self):
            return self.getTypedRuleContext(CodeJPParser.UnaryContext,0)


        def factor(self):
            return self.getTypedRuleContext(CodeJPParser.FactorContext,0)


        def getRuleIndex(self):
            return CodeJPParser.RULE_unary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary" ):
                listener.enterUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary" ):
                listener.exitUnary(self)




    def unary(self):

        localctx = CodeJPParser.UnaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_unary)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(CodeJPParser.T__13)
                self.state = 92
                self.unary()
                pass
            elif token in [15, 16, 36, 37, 38, 40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.factor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(CodeJPParser.NUM, 0)

        def REAL(self):
            return self.getToken(CodeJPParser.REAL, 0)

        def STRING(self):
            return self.getToken(CodeJPParser.STRING, 0)

        def ID(self):
            return self.getToken(CodeJPParser.ID, 0)

        def getRuleIndex(self):
            return CodeJPParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = CodeJPParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1580548063232) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_(self):
            return self.getTypedRuleContext(CodeJPParser.BoolContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.BlockContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.BlockContext,i)


        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CodeJPParser.FactorContext)
            else:
                return self.getTypedRuleContext(CodeJPParser.FactorContext,i)


        def ID(self):
            return self.getToken(CodeJPParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(CodeJPParser.ExprContext,0)


        def STRING(self):
            return self.getToken(CodeJPParser.STRING, 0)

        def NUM(self):
            return self.getToken(CodeJPParser.NUM, 0)

        def getRuleIndex(self):
            return CodeJPParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = CodeJPParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(CodeJPParser.T__16)
                self.state = 99
                self.match(CodeJPParser.T__17)
                self.state = 100
                self.bool_()
                self.state = 101
                self.match(CodeJPParser.T__18)
                self.state = 102
                self.block()
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 103
                    self.match(CodeJPParser.T__19)
                    self.state = 104
                    self.block()


                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(CodeJPParser.T__20)
                self.state = 108
                self.match(CodeJPParser.T__17)
                self.state = 109
                self.bool_()
                self.state = 110
                self.match(CodeJPParser.T__18)
                self.state = 111
                self.block()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(CodeJPParser.T__21)
                self.state = 114
                self.block()
                self.state = 115
                self.match(CodeJPParser.T__20)
                self.state = 116
                self.match(CodeJPParser.T__17)
                self.state = 117
                self.bool_()
                self.state = 118
                self.match(CodeJPParser.T__18)
                self.state = 119
                self.match(CodeJPParser.T__0)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.match(CodeJPParser.T__22)
                self.state = 122
                self.match(CodeJPParser.T__0)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.match(CodeJPParser.T__23)
                self.state = 124
                self.match(CodeJPParser.T__17)
                self.state = 125
                self.factor()
                self.state = 126
                self.match(CodeJPParser.T__24)
                self.state = 127
                self.factor()
                self.state = 128
                self.match(CodeJPParser.T__18)
                self.state = 129
                self.match(CodeJPParser.T__0)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.match(CodeJPParser.T__25)
                self.state = 132
                self.match(CodeJPParser.T__17)
                self.state = 133
                self.factor()
                self.state = 134
                self.match(CodeJPParser.T__24)
                self.state = 135
                self.match(CodeJPParser.ID)
                self.state = 136
                self.match(CodeJPParser.T__18)
                self.state = 137
                self.match(CodeJPParser.T__0)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 7)
                self.state = 139
                self.match(CodeJPParser.T__26)
                self.state = 140
                self.match(CodeJPParser.T__17)
                self.state = 141
                self.match(CodeJPParser.ID)
                self.state = 142
                self.match(CodeJPParser.T__24)
                self.state = 143
                self.expr()
                self.state = 144
                self.match(CodeJPParser.T__18)
                self.state = 145
                self.match(CodeJPParser.T__0)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 8)
                self.state = 147
                self.match(CodeJPParser.T__27)
                self.state = 148
                self.match(CodeJPParser.T__17)
                self.state = 149
                self.match(CodeJPParser.ID)
                self.state = 150
                self.match(CodeJPParser.T__24)
                self.state = 151
                _la = self._input.LA(1)
                if not(_la==37 or _la==40):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 152
                self.match(CodeJPParser.T__18)
                self.state = 153
                self.match(CodeJPParser.T__0)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 9)
                self.state = 154
                self.match(CodeJPParser.T__28)
                self.state = 155
                self.match(CodeJPParser.T__17)
                self.state = 156
                self.match(CodeJPParser.ID)
                self.state = 157
                self.match(CodeJPParser.T__24)
                self.state = 158
                self.expr()
                self.state = 159
                self.match(CodeJPParser.T__18)
                self.state = 160
                self.match(CodeJPParser.T__0)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 10)
                self.state = 162
                self.match(CodeJPParser.T__29)
                self.state = 163
                self.match(CodeJPParser.T__17)
                self.state = 164
                self.match(CodeJPParser.ID)
                self.state = 165
                self.match(CodeJPParser.T__24)
                self.state = 166
                self.match(CodeJPParser.STRING)
                self.state = 167
                self.match(CodeJPParser.T__18)
                self.state = 168
                self.match(CodeJPParser.T__0)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 11)
                self.state = 169
                self.match(CodeJPParser.T__30)
                self.state = 170
                self.match(CodeJPParser.T__17)
                self.state = 171
                self.expr()
                self.state = 172
                self.match(CodeJPParser.T__18)
                self.state = 173
                self.match(CodeJPParser.T__0)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 12)
                self.state = 175
                self.match(CodeJPParser.ID)
                self.state = 176
                self.match(CodeJPParser.T__31)
                self.state = 177
                self.expr()
                self.state = 178
                self.match(CodeJPParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmts(self):
            return self.getTypedRuleContext(CodeJPParser.StmtsContext,0)


        def stmt(self):
            return self.getTypedRuleContext(CodeJPParser.StmtContext,0)


        def getRuleIndex(self):
            return CodeJPParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = CodeJPParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_block)
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(CodeJPParser.T__32)
                self.state = 183
                self.stmts()
                self.state = 184
                self.match(CodeJPParser.T__33)
                pass
            elif token in [17, 21, 22, 23, 24, 26, 27, 28, 29, 30, 31, 36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





